--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-scripts.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-scripts.html
@@ -21,6 +21,8 @@
 <script type="text/javascript" src="./webjars/eits-ng/eits-ng.js"></script>
 <script type="text/javascript" src="./webjars/eits-md/eits-md.js"></script>
 
+<script type="text/javascript" src="./webjars/angular-mask/3.0.16/dist/ngMask.js"></script>
+
 <!-- DWR -->
 <script type="text/javascript" src="./broker/engine.js"></script>
 <script type="text/javascript" src="./broker/util.js"></script>
