--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-scripts.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-scripts.html
@@ -23,6 +23,8 @@
 
 <script type="text/javascript" src="./webjars/angular-mask/3.0.16/dist/ngMask.js"></script>
 
+<!-- <script type="text/javascript" src="./webjars/moment.js/2.10.2/moment.js"></script> -->
+
 <!-- DWR -->
 <script type="text/javascript" src="./broker/engine.js"></script>
 <script type="text/javascript" src="./broker/util.js"></script>
