--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-scripts.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-scripts.html
@@ -29,6 +29,10 @@
 <script type="text/javascript" src="./broker/engine.js"></script>
 <script type="text/javascript" src="./broker/util.js"></script>
 
+<!-- CPF validator -->
+<script type="text/javascript" src="./webjars/cpf_cnpj/0.0.3/build/cpf.js"></script>
+<script type="text/javascript" src="./webjars/ng-cpf-cnpj/0.0.5/lib/ngCpfCnpj.js"></script>
+
 <script type="text/javascript" th:inline="javascript">
 	//Remove qualquer plugin adicional do browser
 	$(document).ready(function() {
