--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-styles.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-styles.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"></link>
-<link rel="icon" href="./favicon.ico" type="image/x-icon"></link>
+<link rel="icon" href="./aldeias.jpg" type="image/x-icon"></link>
 
 <link rel="stylesheet" href="./webjars/angular-material/angular-material.min.css"></link>
 <link rel="stylesheet" href="./webjars/angular-material-data-table/dist/md-data-table.min.css"></link>
