--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-scripts.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-scripts.html
@@ -33,6 +33,8 @@
 <script type="text/javascript" src="./webjars/cpf_cnpj/0.0.3/build/cpf.js"></script>
 <script type="text/javascript" src="./webjars/ng-cpf-cnpj/0.0.5/lib/ngCpfCnpj.js"></script>
 
+<script type="text/javascript" src="./webjars/angular-material-expansion-panel/0.6.1/dist/md-expansion-panel.min.js"></script>
+
 <script type="text/javascript" th:inline="javascript">
 	//Remove qualquer plugin adicional do browser
 	$(document).ready(function() {
