--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-styles.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/default-styles.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="./webjars/angular-material/angular-material.min.css"></link>
 <link rel="stylesheet" href="./webjars/angular-material-data-table/dist/md-data-table.min.css"></link>
 <link rel="stylesheet" href="./webjars/material-design-iconic-font/dist/css/material-design-iconic-font.min.css"></link>
+<link rel="stylesheet" href="./webjars/angular-material-expansion-panel/0.6.1/dist/md-expansion-panel.min.css"></link>
 <link rel="stylesheet" href="./webjars/eits-md/eits-md.css"></link>
 
 <link rel="stylesheet" th:href="@{/static/css/theme.css}"></link>
